// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Block renders block with button inside option 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-inside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <TextInput
        accessibilityLabel="Text input. <p>Search</p>"
        activeFormats={Array []}
        allowFontScaling={true}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBlur={[Function]}
        onChange={[Function]}
        onContentSizeChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onSelectionChange={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        rejectResponderTermination={true}
        triggerKeyCodes={Array []}
        underlineColorAndroid="transparent"
        value="<p>Search</p>"
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        undefined,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        allowFontScaling={true}
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Array [
            Array [
              false,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <TextInput
            accessibilityLabel="Text input. <p>Search Button</p>"
            activeFormats={Array []}
            allowFontScaling={true}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBlur={[Function]}
            onChange={[Function]}
            onContentSizeChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            rejectResponderTermination={true}
            textAlign="center"
            triggerKeyCodes={Array []}
            underlineColorAndroid="transparent"
            value="<p>Search Button</p>"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders block with icon button option matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__icon-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <TextInput
        accessibilityLabel="Text input. <p>Search</p>"
        activeFormats={Array []}
        allowFontScaling={true}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBlur={[Function]}
        onChange={[Function]}
        onContentSizeChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onSelectionChange={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        rejectResponderTermination={true}
        triggerKeyCodes={Array []}
        underlineColorAndroid="transparent"
        value="<p>Search</p>"
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        allowFontScaling={true}
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      Svg
    </View>
  </View>
</View>
`;

exports[`Search Block renders block with label hidden matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        allowFontScaling={true}
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <TextInput
            accessibilityLabel="Text input. <p>Search Button</p>"
            activeFormats={Array []}
            allowFontScaling={true}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBlur={[Function]}
            onChange={[Function]}
            onContentSizeChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            rejectResponderTermination={true}
            textAlign="center"
            triggerKeyCodes={Array []}
            underlineColorAndroid="transparent"
            value="<p>Search Button</p>"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders with default configuration matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <TextInput
        accessibilityLabel="Text input. <p>Search</p>"
        activeFormats={Array []}
        allowFontScaling={true}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBlur={[Function]}
        onChange={[Function]}
        onContentSizeChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onSelectionChange={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        rejectResponderTermination={true}
        triggerKeyCodes={Array []}
        underlineColorAndroid="transparent"
        value="<p>Search</p>"
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        allowFontScaling={true}
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <TextInput
            accessibilityLabel="Text input. <p>Search Button</p>"
            activeFormats={Array []}
            allowFontScaling={true}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBlur={[Function]}
            onChange={[Function]}
            onContentSizeChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            rejectResponderTermination={true}
            textAlign="center"
            triggerKeyCodes={Array []}
            underlineColorAndroid="transparent"
            value="<p>Search Button</p>"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders with no-button option matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__no-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <TextInput
        accessibilityLabel="Text input. <p>Search</p>"
        activeFormats={Array []}
        allowFontScaling={true}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBlur={[Function]}
        onChange={[Function]}
        onContentSizeChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onSelectionChange={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        rejectResponderTermination={true}
        triggerKeyCodes={Array []}
        underlineColorAndroid="transparent"
        value="<p>Search</p>"
      />
    </View>
  </View>
  <View
    accessibilityLabel="search-block-input"
    accessibilityRole="none"
    accessible={true}
  >
    <TextInput
      allowFontScaling={true}
      className="wp-block-search__input"
      ellipsizeMode="tail"
      fontFamily="serif"
      isSelected={false}
      label={null}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Optional placeholder…"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Array [
          Array [
            undefined,
            undefined,
            undefined,
          ],
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;
